# degenerate-diffusion

./: .gitignore  .pre-commit-config.yaml  404.html  DegenerateDiffuisonProcess_Ruff.py  DegenerateDiffusionProcess.py  DegenerateDiffusionProcess_JAX.py  FNmodel.ipynb  FNmodel_nh_100.ipynb  LikelihoodEvaluator.py  LikelihoodEvaluator_JAX.py  ParameterEstimator.py  README.md  README_ja.md  SImulation.ipynb  closed_inference.ipynb  degenerate_simulation copy.ipynb  degenerate_simulation.ipynb  degenerate_simulation_FN.ipynb  degenerate_simulation_linear.ipynb  degenerate_simulation_takagi.ipynb  degenerate_simulation_takagi_6_27.ipynb  degenerate_simulation_takagi_SIN.ipynb  degenerate_simulation_transition.ipynb  einsum_sympy.py  hayakusitayatu.ipynb  introduction_English.tex  jax_study.ipynb  linearmodel.ipynb  main_result_English3.tex  mkdocs.yml  nh10h10-2QLA.csv  notation_and_assumption_English3.tex  note.md  project_imports.py  pyproject.toml  pytest.ini  quasi_likelihood.ipynb  ruff.toml  ruff_output.txt  simulation_degenerate.ipynb  (+6 more)
blackjax_nuts_usage/: index.html
degenerate_sim/: __init__.py
docs/: blackjax_nuts_usage.md  jax_control_flow_loops_ja.md  likelihood_evaluator_guide.md  optax_basics_ja.md  parameter_estimator_usage.md
experiment/: __init__.py  fnmodel_experiment.ipynb  linearmodel_experiment.ipynb  result_processing.py
jax_control_flow_loops_ja/: index.html
likelihood_evaluator_guide/: index.html
notebooks/: FNmodel.ipynb  FNmodel_nh_100.ipynb  build_seed_runner_demo.ipynb  closed_form_estimation.ipynb  closed_inference.ipynb  linearmodel.ipynb  linearmodel_seed_runner_demo.ipynb  linearmodel_seed_runner_results.csv
old/: degenerate_diffusion_process.py  degenerate_diffusion_process_ruff.py  likelihood_evaluator.py
optax_basics_ja/: index.html
parameter_estimator_usage/: index.html
search/: search_index.json
simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_degenerate_diffusion_process_simulations.py  test_einsum_sympy.py  test_fnmodel_regression.py  test_likelihood_evaluator_equivalence.py  test_loop_estimation_algorithm.py  test_loop_estimation_algorithm_new.py  test_parameter_estimator.py  test_parameter_estimator_new.py  (+1 more)
(+41 files in other folders)
