[project]
name = "degenerate-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle~=3.1",
    "jax~=0.8",
    "jaxlib~=0.8",
    "jaxopt~=0.8",
    "numpy~=2.3",
    "numpyro~=0.19",
    "optax~=0.2",
    "sympy~=1.14",
    "tqdm~=4.67",
]

[project.optional-dependencies]
notebooks = [
    "appnope~=0.1; sys_platform == 'darwin'",
    "ipykernel~=6.30",
    "ipywidgets~=8.1",
    "jupyterlab~=4.4",
    "jupyterlab-widgets~=3.0",
    "nbconvert~=7.16",
    "nbformat~=5.10",
    "notebook-shim~=0.2",
    "pandas~=2.3",
    "seaborn~=0.13",
]
viz = ["matplotlib~=3.10", "seaborn~=0.13"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["degenerate_diffusion*"]
exclude = ["old*", "__pycache__"]

[tool.setuptools.package-data]
"degenerate_diffusion" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython~=8.0",
    "mypy~=1.8",
    "pytest~=8.0",
    "pytest-cov~=5.0",
    "ruff~=0.5",
]

#ruff_setting

# [tool.ruff]
# force-exclude = true
# line-length = 100
# target-version = "py311"
# exclude = [
#     ".git",
#     ".mypy_cache",
#     ".ruff_cache",
#     ".pytest_cache",
#     ".venv",
#     ".vscode",
#     "venv",
#     "build",
#     "dist",
#     "site-packages",
#     ".ipynb_checkpoints",
#     "old",
#     "old/**",
#     "*.ipynb",
# ]

# [tool.ruff.lint]
# extend-select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF"]
# extend-ignore = ["D", "PLR0913", "T201"]
# fixable = ["ALL"]

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "space"
# docstring-code-format = true

# [tool.ruff.lint.per-file-ignores]
# "tests/**" = ["INP001", "S101"]
